<resources>
    <string name="app_name">Sport Journal</string>

    <string name="Workouts">Workouts</string>
    <string name="addWorkout">Add workout</string>
    <string name="newWorkout">New workout</string>
    <string name="Date">Date</string>
    <string name="workoutsName">Workout\'s name</string>
    <string name="newRound">Add an exercise</string>
    <string name="pickAnExercise">Pick an exercise</string>
    <string name="exerciseRepeats">Number of repeats</string>
    <string name="exerciseWeight">Weight</string>
    <string name="seriesNumber">Series</string>
    <string name="restTime">Rest time</string>

    <string name="Plans">Plans</string>
    <string name="CreatePlan">Create a plan</string>

    <string name="Calendar">Calendar</string>


    <string name="Statistics">Statistics</string>
    <string name="SPLASH">SPLASH</string>
    <string name="done">Done</string>
    <string name="WIP">Work in progress</string>
    <string name="enterPhoneNumber">Enter your phone number</string>
    <string name="enterCode">Enter Code</string>
    <string name="WeSendCode">We send you a code via sms</string>
    <string name="SendCode">Send a code</string>
    <string name="enterEmail">Email</string>
    <string name="enterPassword">Password</string>
    <string name="auth">Sign in</string>
    <string name="registration">Create account</string>
    <string name="required">Required</string>
    <string name="AuthFail">Authentication failed.</string>
    <string name="welcome">Welcome!</string>
    <string name="enterUsername">Enter your username</string>
    <string name="enterSport">Enter your sport</string>
    <string name="DOB">Birthday</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="gender_unknown">Rather not say</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="saveWorkout">Save workout</string>
    <string name="workout_difficulty">Difficulty: %1$d</string>
    <string name="WorkoutReview">Workout review</string>
    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="workout_delete_alert">Workout will be deleted</string>
    <string name="alert_check">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_workout_desc">Enter your notes here</string>
    <string name="nextStep">Next step</string>
    <string name="pickADate">Pick a date</string>
    <string name="difficulty">Difficulty</string>
    <string name="addPlan">Create new plan</string>
    <string name="Plan">Plan</string>
    <string name="save_changes">Changes will be saved</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="add_new_plan">Add new plan</string>
    <string name="plan_name">Plan name</string>
    <string name="newRoutine">New routine</string>
    <string name="newRoutineName">New routine\'s name</string>
    <string name="dayOfPlan">Day of the plan</string>
    <string name="addRound">Add round</string>
    <string name="routinePerDayNumber">Workout\'s number this day</string>
    <string name="saveButton">Save</string>
    <string name="plan_delete_alert">Plan will be deleted</string>
    <string name="reps">Reps: %1$d</string>
    <string name="weight">"Weight: %1$d kg"</string>
    <string name="percent">"%1$d %%"</string>
    <string name="rest">Rest: %1$d sec</string>
    <string name="routineDay">"Day: %1$d"</string>
    <string name="routineNumber">"workout number: %1$d"</string>
    <string name="choose_plan">Choose a plan</string>
    <string name="choose_routine">Choose a routine</string>
    <string name="addWorkoutFromPlan">Add workout from the plan</string>
    <string name="creatingExerciseAdvise">If you can\'t find exercise in the list, click "create new exercise" button.</string>
    <string name="createExercise">Create new exercise</string>
    <string name="exercises">Exercises</string>
    <string name="addToWorkout">add to workout</string>

    <string-array name="exercise_types_array">
        <item>Unknown</item>
        <item>Horizontal push</item>
        <item>Vertical push</item>
        <item>Hip dominant</item>
        <item>Knee dominant</item>
        <item>Ankle dominant</item>
        <item>Hip dominant + Knee dominant</item>
        <item>Horizontal pulls</item>
        <item>Vertical pulls</item>
        <item>Core muscles</item>
    </string-array>

    <string name="unknown">Unknown</string>
    <string name = "firstMuscleGroup">Грудные мышцы</string>
    <string name = "secondMuscleGroup">Мышцы бедра</string>
    <string name = "thirdMuscleGroup">Мышцы поясницы</string>

    <string name="added">(Added)</string>
    <string name="allTime">All time</string>
    <string name="choosePeriod">Choose period</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="totalWeight">Total weight: %1$d kg</string>
    <string name="date_unknown">Date not given</string>
    <string name="refresh">Refresh</string>
    <string name="createNewExercise">Create new exercise</string>
    <string name="exerciseName">Exercise name</string>
    <string name="exercise_type">Exercise type</string>
    <string name="myAthletes">My athletes</string>
    <string name="Social">Social</string>
    <string name="sendRequest">Send a request</string>
    <string name="email">Email</string>
    <string name="requestHint">Enter email of your coach</string>
    <string name="no_email_exception">There are no user with this email! Try again</string>
    <string name="checkWorkouts">Check workouts</string>
    <string name="checkStatistics">Check statistics</string>
    <string name="sendPlans">Send plans</string>
    <string name="choose_workouts">Choose a workout</string>

</resources>