<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">


    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/checkWorkoutsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkWorkouts" />

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/checkStatisticsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkStatistics" />

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/sendPlansBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendPlans" />

</LinearLayout>