<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/newWorkout"
        app:titleTextColor="?colorOnPrimary" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/workoutsName"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            tools:text="Силовая тренировка" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/pickADate"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/date_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pickADate"
            android:src="@drawable/calendar" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_workout_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/date_block"
        android:text="@string/difficulty"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@id/difficulty_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
